--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
         <div class="lg:w-1/3 px-4 mb-6 pb-6 ">
           <div class="w-11/12 m-auto p-6 rounded shadow-md">
             <img src="placeholders/icons/shield.svg" alt="" class="hidden"><h3 class="text-xl my-2 font-heading">+50.000 wejść</h3>
-            <p class="text-gray-500 leading-relaxed">W ciągu pierwszego roku działalności oraz mimo braku budżetu marketingowego.</p>
+            <p class="text-gray-500 leading-relaxed">W ciągu pierwszego roku działalności. Mimo braku budżetu marketingowego.</p>
           </div>
         </div>
         <div class="lg:w-1/3 px-4 mb-6">
           <div class="w-11/12 m-auto p-6 rounded shadow-md">
             <img src="placeholders/icons/cloud-tools.svg" alt="" class="hidden"><h3 class="text-xl my-2 font-heading">Współczynnik Odrzuceń 12.5%</h3>
-            <p class="text-gray-500 leading-relaxed">Mimo innowacyjnego designu mała grupa użytkowników opuszcza z stronę główną.</p>
+            <p class="text-gray-500 leading-relaxed">Nieszablonowy design nie sprawił problemów większości.</p>
           </div>
         </div>
         <div class="lg:w-1/3 px-4 mb-6">
           <div class="w-11/12 m-auto p-6 rounded shadow-md">
             <img src="placeholders/icons/cart.svg" alt="" class="hidden"><h3 class="text-xl my-2 font-heading">Pozytywne Wspomnienie</h3>
-            <p class="text-gray-500 leading-relaxed">Kilku graczy wspomniało Mistrzowi Gry że podobała im się strona internetowa. </p>
+            <p class="text-gray-500 leading-relaxed">Kilku graczy wspomniało Mistrzowi Gry że podobała im się strona internetowa.</p>
           </div>
           </div>
         </div>
@@ -78,9 +78,9 @@
         <div class="w-full max-w-2xl mx-auto">
           <span class="text-sm font-semibold">Faza Reaserchu</span>
           <h2 class="text-5xl mt-2 mb-6 leading-tight font-heading">Jak sprawić by regularni gracze dali szasne nowej firmie?</h2>
-          <p class="text-blue-700">Świetną baza danych na temat zachowań użytkowników okazał się portal LockMe gdzie można prześledzić profilk każdego użytkownika sprawdzając jakie pokoje odwiedza oraz jakie oceny wystawia.</p>
+          <p class="text-blue-700">Świetną baza danych na temat zachowań konsumentów okazał się portal LockMe gdzie można prześledzić profil każdego użytkownika, sprawdzając jakie pokoje odwiedza oraz jakie oceny wystawia.</p>
           <br>
-          <p class="text-blue-700">Wnioski do których doszedłem obserwując zachowanie użytkowników:</p>
+          <p class="text-blue-700">Wnioski do których doszedłem śledząc zachowanie ponad 10 użytkowników:</p>
         </div>
       </section>
     
@@ -124,7 +124,7 @@
         <div class="w-full max-w-2xl mx-auto">
           <span class="text-sm font-semibold">Wniosek:</span>
           <h2 class="text-5xl mt-2 mb-6 leading-tight font-heading">Landing Page musi przekonać graczy że pokoje tej firmy mają klimat.</h2>
-          <a class="text-blue-700 hover:underline" href="#">Zrezygnowałem z typowych wzorów na strone główną. Strona musi oddawać klimat pokoju. To jedyny sposób dla nowej firmy by konkurować z innymi pokojami. Znaleźliśmy błękitny ocean który zamierzamy wykorzystać.</a>
+          <a class="text-blue-700 hover:underline" href="#">Zrezygnowałem z typowych wzorów na strone główną. Priorytetem jest to by strona oddawała klimat pokoju.</a>
         </div>
       </section>
     
